name:                hub
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ulfl/hub#readme
license:             GPL
license-file:        LICENSE
author:              Ulf Leopold
maintainer:          336dev@gmail.com
copyright:           Copyright: (c) 2016 Ulf Leopold
category:            application
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hub.Hub, Hub.CmdLine, Hub.CommandType, Hub.Config,
                       Hub.ConfigMarkdown, Hub.ConfigLua, Hub.ConfigLuaPrelude
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , vty
                     , directory
                     , filepath
                     , text
                     , process
                     , vector
                     , containers
                     , pretty-show
                     , text-zipper
                     , lens
                     , cmdargs
                     , hslua
                     , cheapskate
                     , hint
                     , bytestring
                     , here
                     , QuickCheck
  default-language:    Haskell2010

executable hub
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hub
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulfl/hub
