name:                hub
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ulfl/hub#readme
license:             GPL
license-file:        LICENSE
author:              Ulf Leopold
maintainer:          336dev@gmail.com
copyright:           Copyright: (c) 2016-2019 Ulf Leopold
category:            application
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Hub.Hub, Hub.CmdLine, Hub.CommandType, Hub.Config,
                       Hub.ConfigMarkdown, Hub.ConfigLua, Hub.ConfigLuaPrelude
  build-depends:       base >=4.9.1 && <4.12
                     , brick >=0.19 && <0.38
                     , bytestring >=0.10.8 && <0.11
                     , cheapskate >=0.1.0 && <0.2
                     , cmdargs >=0.10.18 && <0.11
                     , containers >=0.5.7 && <0.6
                     , directory >=1.3.0 && <1.4
                     , filepath >=1.4.1 && <1.5
                     , here >=1.2.12 && <1.3
                     , hslua >=0.6.0 && <0.10
                     , lens >=4.15.4 && <4.17
                     , optparse-applicative
                     , process >=1.4.3 && <1.7
                     , text >=1.2.2 && <1.3
                     , text-zipper >=0.10.1 && <0.11
                     , vector >=0.12.0 && <0.13
                     , vty >=5.16 && <5.22
  default-language:    Haskell2010

executable hub
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.9.1 && <4.12
                     , hub
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulfl/hub
