name:                hub
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ulfl/hub#readme
license:             GPL
license-file:        LICENSE
author:              Ulf Leopold
maintainer:          336dev@gmail.com
copyright:           Copyright: (c) 2016-2019 Ulf Leopold
category:            application
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Hub.Hub,
                       Hub.CmdLine,
                       Hub.CommandType,
                       Hub.Config,
                       Hub.ConfigDhall
  build-depends:       base
                     , brick
                     , bytestring
                     , cmdargs
                     , containers
                     , dhall
                     , directory
                     , filepath
                     , here
                     , hslua
                     , lens
                     , optparse-applicative
                     , process
                     , text
                     , text-zipper
                     , vector
                     , vty
  default-extensions: DataKinds
                      DeriveGeneric
                      DeriveFunctor
                      FlexibleContexts
                      FlexibleInstances
                      LambdaCase
                      MultiParamTypeClasses
                      OverloadedStrings
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      QuasiQuotes
  default-language:    Haskell2010

executable hub
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hub
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulfl/hub
